--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,12 +72,13 @@
 
 body {
   display: none;
-  margin: 0;
+  margin: 0 auto;
   background-color: var(--background-color);
   color: var(--text-color);
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-m);
   line-height: 1.6;
+  max-width: 105pc;
 }
 
 body.appear {
@@ -155,15 +156,16 @@ button {
 
 /* links */
 a:any-link {
-  color: var(--link-color);
+  color: inherit;
   text-decoration: none;
   word-break: break-word;
-}
-
-a:hover {
-  color: var(--link-hover-color);
   text-decoration: underline;
 }
+
+/* a:hover {
+  color: var(--link-hover-color);
+  text-decoration: underline;
+} */
 
 /* buttons */
 a.button:any-link,
