--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -115,3 +115,18 @@ footer .footer p {
     padding: 40px 32px 24px;
   }
 }
+
+@media(max-width: 767px) {
+  footer .section {
+    padding: 14px;
+  }
+
+  .footer-nav > ul {
+    display: block;
+    margin: 0;
+  }
+
+  .footer-social-links {
+    display: block;
+  }
+}
