--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,7 +11,7 @@ footer {
   max-width: 873pt !important;
 }
 
-footer .footer > div {
+footer .footer>div {
   padding: 0 14px;
 }
 
@@ -27,11 +27,11 @@ footer .footer > div {
   float: left;
 }
 
-.footer-nav > ul{
+.footer-nav>ul {
   display: flex;
 }
 
-.footer-nav li{
+.footer-nav li {
   list-style-type: none;
 }
 
@@ -47,6 +47,7 @@ footer .footer > div {
 .footer-nav a:hover {
   text-decoration: underline;
 }
+
 .footer-logo img {
   width: 100%;
   height: auto;
@@ -59,7 +60,6 @@ footer .footer > div {
   float: left;
   padding: 0 14px;
   display: flex;
-  /* width: 33.33%; */
 }
 
 .footer-social-links p {
@@ -75,16 +75,17 @@ footer .footer > div {
 
 .footer-social-links ul {
   background-color: #f7f7f7;
-  padding: 0px;
+  padding: 0;
   display: flex;
 }
 
-.footer-social-links ul > li {
+.footer-social-links ul>li {
   list-style-type: none;
-  padding: 12px 12px 0 12px;
+  padding: 12px 12px 0;
   cursor: pointer;
 }
-.footer-social-links ul > li img {
+
+.footer-social-links ul>li img {
   width: 24px;
   height: auto;
 }
@@ -102,7 +103,7 @@ footer .footer > div {
   font-family: sans-serif;
 }
 
-.default-content-wrapper > p {
+.default-content-wrapper>p {
   clear: both;
 }
 
@@ -110,18 +111,18 @@ footer .footer p {
   margin: 0;
 }
 
-@media (width >= 900px) {
-  footer .footer > div {
+@media (width >=900px) {
+  footer .footer>div {
     padding: 40px 32px 24px;
   }
 }
 
-@media(max-width: 767px) {
+@media(width <= 767px) {
   footer .section {
     padding: 14px;
   }
 
-  .footer-nav > ul {
+  .footer-nav>ul {
     display: block;
     margin: 0;
   }
