--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -17,8 +17,7 @@ header nav {
   box-sizing: border-box;
   display: grid;
   grid-template:
-    'hamburger brand tools' var(--nav-height)
-    'sections sections sections' 1fr / auto 1fr auto;
+    'hamburger brand tools' var(--nav-height) 'sections sections sections' 1fr / auto 1fr auto;
   /* align-items: center; */
   gap: 0 24px;
   /* margin: auto; */
@@ -30,8 +29,7 @@ header nav {
 
 header nav[aria-expanded='true'] {
   grid-template:
-    'hamburger brand' var(--nav-height)
-    'sections sections' 1fr
+    'hamburger brand' var(--nav-height) 'sections sections' 1fr
     'tools tools' var(--nav-height) / auto 1fr;
   overflow-y: auto;
   min-height: 100dvh;
@@ -80,11 +78,11 @@ header nav[aria-expanded='true'] {
 
 @keyframes cmp-search__loading-indicator-spin {
   0 {
-      transform: rotate(0)
+    transform: rotate(0)
   }
 
   100% {
-      transform: rotate(360deg)
+    transform: rotate(360deg)
   }
 }
 
@@ -150,7 +148,8 @@ header nav[aria-expanded='true'] {
   pointer-events: none
 }
 
-.cmp-search__icon,.cmp-search__loading-indicator {
+.cmp-search__icon,
+.cmp-search__loading-indicator {
   height: 1rem;
   left: .5rem;
   position: absolute;
@@ -169,25 +168,25 @@ header nav[aria-expanded='true'] {
 
 @-webkit-keyframes cmp-search__loading-indicator-spin {
   0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg)
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg)
   }
 
   to {
-      -webkit-transform: rotate(1turn);
-      transform: rotate(1turn)
+    -webkit-transform: rotate(1turn);
+    transform: rotate(1turn)
   }
 }
 
 @keyframes cmp-search__loading-indicator-spin {
   0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg)
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg)
   }
 
   to {
-      -webkit-transform: rotate(1turn);
-      transform: rotate(1turn)
+    -webkit-transform: rotate(1turn);
+    transform: rotate(1turn)
   }
 }
 
@@ -234,7 +233,8 @@ header nav[aria-expanded='true'] {
   padding-top: 10px
 }
 
-.cmp-search--header .cmp-search__clear-icon,.cmp-search--header .cmp-search__icon {
+.cmp-search--header .cmp-search__clear-icon,
+.cmp-search--header .cmp-search__icon {
   top: .8rem
 }
 
@@ -242,18 +242,18 @@ header nav[aria-expanded='true'] {
   background-color: #ebebeb8a;
   border: none;
   border-radius: 0;
-  color: var(--textColor,#202020);
-  font-size: var(--fontSizeXSmall,9pt);
+  color: var(--textColor, #202020);
+  font-size: var(--fontSizeXSmall, 9pt);
   height: 40px;
   width: calc(100% - 4rem)
 }
 
 .cmp-search--header .cmp-search__input:focus {
-  background-color: var(--bodyBackground,#fff);
-  border: 1px solid var(--textColor,#202020);
+  background-color: var(--bodyBackground, #fff);
+  border: 1px solid var(--textColor, #202020);
   -webkit-box-shadow: none;
   box-shadow: none;
-  outline: none!important
+  outline: none !important
 }
 
 .cmp-search--header .cmp-search__input::-webkit-input-placeholder {
@@ -278,8 +278,8 @@ header nav[aria-expanded='true'] {
 
 .cmp-search--header .cmp-search__results {
   background: #202020;
-  -webkit-box-shadow: 0 5px 10px 0 rgba(0,0,0,.25);
-  box-shadow: 0 5px 10px 0 rgba(0,0,0,.25);
+  -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .25);
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .25);
   left: unset;
   margin-top: .75em;
   max-height: unset;
@@ -288,8 +288,8 @@ header nav[aria-expanded='true'] {
 }
 
 .cmp-search--header a.cmp-search__item {
-  color: var(--brandThird,#ebebeb);
-  font-size: var(--fontSizeSmall,14px);
+  color: var(--brandThird, #ebebeb);
+  font-size: var(--fontSizeSmall, 14px);
   height: 50px;
   margin-top: .25em;
   padding: .5em;
@@ -302,52 +302,55 @@ header nav[aria-expanded='true'] {
 
 .cmp-search--header .cmp-search__item-mark {
   background-color: #f7f7f7;
-  color: var(--textColor,#202020)
+  color: var(--textColor, #202020)
 }
 
 @media(max-width: 1024px) {
   .cmp-search--header .cmp-search__input {
-      max-width:10rem;
-      position: absolute;
-      right: 14px
+    max-width: 10rem;
+    position: absolute;
+    right: 14px
   }
 
   .cmp-search--header .cmp-search__results {
-      right: .75rem
+    right: .75rem
   }
 
-  .cmp-search--header .cmp-search__icon,.cmp-search--header .cmp-search__loading-indicator {
-      left: unset;
-      right: 13.5rem;
-      z-index: 1
+  .cmp-search--header .cmp-search__icon,
+  .cmp-search--header .cmp-search__loading-indicator {
+    left: unset;
+    right: 13.5rem;
+    z-index: 1
   }
 
   .cmp-search--header .cmp-search__clear-icon {
-      right: 1.5rem
+    right: 1.5rem
   }
 }
 
 @media(max-width: 767px) {
-  header .nav-wrapper{
+  header .nav-wrapper {
     padding: 14px 0;
   }
+
   .cmp-search--header {
-      padding-right:0;
-      position: absolute;
-      right: 0;
-      z-index: 100
+    padding-right: 0;
+    position: absolute;
+    right: 0;
+    z-index: 100
   }
 
   .cmp-search--header .cmp-search__input {
-      width: 6rem
+    width: 6rem
   }
 
-  .cmp-search--header .cmp-search__icon,.cmp-search--header .cmp-search__loading-indicator {
-      right: 9.5rem
+  .cmp-search--header .cmp-search__icon,
+  .cmp-search--header .cmp-search__loading-indicator {
+    right: 9.5rem
   }
 }
 
-@media (width >= 900px) {
+@media (width >=900px) {
   .nav-wrapper {
     float: unset !important;
     margin: 0 auto;
@@ -373,20 +376,24 @@ header nav[aria-expanded='true'] {
   float: left;
   width: 66.6666666667%;
 }
-.nav-sections > .default-content-wrapper {
+
+.nav-sections>.default-content-wrapper {
   padding-top: 15px;
   float: right;
 }
-.nav-sections > .default-content-wrapper a {
+
+.nav-sections>.default-content-wrapper a {
   color: #202020;
   font-size: 14px;
   padding: 15px 17px;
   text-decoration: none;
   text-transform: uppercase;
 }
-.nav-sections > .default-content-wrapper a:hover {
+
+.nav-sections>.default-content-wrapper a:hover {
   background-color: #ffea00;
 }
+
 .nav-tools {
   float: left;
   width: 16.6666666667%;
@@ -475,7 +482,7 @@ header nav[aria-expanded='true'] .nav-hamburger-icon::after {
   transform: rotate(-45deg);
 }
 
-@media (width >= 900px) {
+@media (width >=900px) {
   header nav .nav-hamburger {
     display: none;
     visibility: hidden;
@@ -516,19 +523,19 @@ header nav .nav-sections ul {
   font-size: var(--body-font-size-s);
 }
 
-header nav .nav-sections ul > li {
+header nav .nav-sections ul>li {
   font-weight: 500;
 }
 
-header nav .nav-sections ul > li > ul {
+header nav .nav-sections ul>li>ul {
   margin-top: 0;
 }
 
-header nav .nav-sections ul > li > ul > li {
+header nav .nav-sections ul>li>ul>li {
   font-weight: 400;
 }
 
-@media (width >= 900px) {
+@media (width >=900px) {
   header nav .nav-sections {
     display: block;
     visibility: visible;
@@ -571,17 +578,17 @@ header nav .nav-sections ul > li > ul > li {
     margin: 0;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li {
+  header nav .nav-sections .default-content-wrapper>ul>li {
     flex: 0 1 auto;
     position: relative;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li > ul {
+  header nav .nav-sections .default-content-wrapper>ul>li>ul {
     display: none;
     position: relative;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul {
+  header nav .nav-sections .default-content-wrapper>ul>li[aria-expanded='true']>ul {
     display: block;
     position: absolute;
     left: -24px;
@@ -592,7 +599,7 @@ header nav .nav-sections ul > li > ul > li {
     white-space: initial;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li > ul::before {
+  header nav .nav-sections .default-content-wrapper>ul>li>ul::before {
     content: '';
     position: absolute;
     top: -8px;
@@ -604,7 +611,7 @@ header nav .nav-sections ul > li > ul > li {
     border-bottom: 8px solid var(--light-color);
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li > ul > li {
+  header nav .nav-sections .default-content-wrapper>ul>li>ul>li {
     padding: 8px 0;
   }
 }
