eslint header css fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,8 +20,8 @@
   --link-hover-color: #1d3ecf;
 
   /* fonts */
-  --body-font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
-  --heading-font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+  --body-font-family: "Source Sans Pro","Helvetica Neue",helvetica,arial,sans-serif;
+  --heading-font-family: "Source Sans Pro","Helvetica Neue",helvetica,arial,sans-serif;
 
   /* body sizes */
   --body-font-size-m: 22px;
@@ -157,7 +157,6 @@ button {
 /* links */
 a:any-link {
   color: inherit;
-  text-decoration: none;
   word-break: break-word;
   text-decoration: underline;
 }
